syntax = "proto3";

package mount;

import "google/protobuf/empty.proto";

// Types for Mount program arguments

// File Handle
message FHandle {
    bytes handle = 1;
}

message FhStatus {
    uint32 status = 1; // 0 for success, non-zero for error
    oneof fhstatus_body {
        FHandle directory = 2; // case status is 0
        google.protobuf.Empty default_case = 3; // default case (status > 0)
    }
}

// A string representing a server pathname of directory
message DirPath {
    string path = 1;
}

// An arbitrary string used for hostnames and group names
message Name {
    string name = 1;
}

// A linked list of mounted entries
message MountList {
    Name hostname = 1;
    DirPath directory = 2;
    MountList nextentry = 3; // Recursive reference for the linked list
}

// The "groups" type, a linked list of group names
message Groups {
    Name grname = 1;
    Groups grnext = 2; // Recursive reference for the linked list
}

// The "exportlist" type, a linked list of exported filesystems
message ExportList {
    DirPath filesys = 1;
    Groups groups = 2;
    ExportList next = 3; // Recursive reference for the linked list
}